--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_holder = Burak Gursoy
 copyright_year   = 2017
 
 ; file modifiers
-[PkgVersion]
+[OurPkgVersion]
 [PodWeaver]
 
 ; file generators
@@ -26,7 +26,7 @@ exclude_match     = Hadoop-Inline-ClassLoader-0\.[0-9]+
 [MetaJSON]
 
 [Keywords]
-keywords = hadoop yarn java inline
+keywords = hadoop yarn java inline mapreduce bigdata hive spark sqoop analytics
 
 [AutoPrereqs]
 [Prereqs]
@@ -38,6 +38,9 @@ perl = 5.014
 [GitHub::Meta]
 
 [Meta::Contributors]
+
+; linting
+;[Test::Perl::Critic]
 
 ; tests
 [MetaTests]
