--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 ; basic stuff
 name    = Hadoop-Inline-ClassLoader
-author  = Burak Gursoy <burak@cpan.org>
+author  = Burak Gursoy
 license = Perl_5
 copyright_holder = Burak Gursoy
 copyright_year   = 2017
